--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                     <img src="/api/placeholder/60/60" alt="Iyke Visuals Logo">
                     <div class="logo-text">
                         <h1>IYKE VISUALS</h1>
-                        <p></p>
+                        <p>Crafting Visuals since 2020</p>
                     </div>
                 </a>
             </div>
